<resources>
    <string name="app_name">Belgorod - travel guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_feed">Fragment Feed</string>
    <string name="fragment_market">Fragment Market</string>
    <string name="fragment_menu">Fragment Menu</string>
    <string name="fragment_profile">Fragment Profile</string>
    <string name="heading">Название</string>
    <string name="news_item">Новость</string>

    <string name="news_date_1">04.07.2021</string>
    <string name="news_date_2">04.07.2021</string>
    <string name="news_date_3">03.07.2021</string>
    <string name="news_date_4">03.07.2021</string>
    <string name="news_date_5">03.07.2021</string>

    <string name="news_heading_1">В воскресенье белгородцам обещают ливни и сильный ветер</string>
    <string name="news_heading_2">В Белгородской области грузовик въехал в легковушку, есть пострадавшие</string>
    <string name="news_heading_3">В Белгородской области липовые инвалиды украли из бюджета 4 миллиона рублей</string>
    <string name="news_heading_4">Три женщины и мужчина умерли от CoViD-19 в Белгородской области за сутки</string>
    <string name="news_heading_5">«Иначе этот ужас никогда не закончится». Впечатления от ковид-госпиталя в Белгороде</string>

    <string name="news_item_1">В прогнозе на воскресенье, 4 июля, белгородские синоптики не очень-то оригинальны [это если судить по последним сводкам, конечно]: жителей региона ожидают ливни и сильный ветер. Каким-то чудом из прогноза пропали грозы. Хотя температура воздуха при этом не снизилась вовсе, даже наоборот – прибавила пару градусов. Как рассказали в областном управлении МЧС, завтра ночью в Белгородской области воздух прогреется до 15-20 выше нуля, а днём столбики термометров...</string>
    <string name="news_item_2">В паблике во ВКонтакте «Губкин говорит» выложили фото с места дорожно-транспортного происшествия на трассе Губкин – Старый Оскол. Дорогу не поделили грузовик Man и Hyundai Solaris. Произошло это, как сообщают в Главном управлении МЧС по региону, в половине пятого утра. Видимо, из-за раннего часа кто-то из водителей вовремя не среагировал или позабыл, что на дороге он не один. Само собой, больше досталось легковушке. И, по всей видимости, тем, кто находил...</string>
    <string name="news_item_3">Четверо белгородцев с поддельными справками об инвалидности семь лет незаконно получали социальные выплаты, рассказали в управлении Следственного комитета по Белгородской области. Для оформления пенсии подозреваемые (их возраст варьируется от 45 до 60 лет) обратились в областное бюро медико-социальной экспертизы, получив в поликлинике направление от врача с ложным диагнозом. Их признали инвалидами второй группы. С готовыми справками злоумышленники обратили...</string>
    <string name="news_item_4">Что ж, теперь можно с полной уверенностью констатировать: ситуация по ковиду в Белгородской области ухудшается. Почему? – спросите вы. Вроде же всё спокойно и обыденно. Возможно. Но чтобы более адекватно представлять ситуацию, обратимся к летальным сводкам – то бишь к количеству умерших от коронавируса за последние дни. ● 1 июля – четыре человека. ● 2 июля – пять человек. ● 3 июля (сегодня) – четыре человека. Ещё пару недель назад число умерших варьировал...</string>
    <string name="news_item_5">Мы многожды уже писали о ситуации в белгородских поликлиниках и больницах. Она, эта ситуация, похоже, отнюдь не радостная. Здравоохранение ещё толком не оправилось от изматывающей и зачастую бессмысленной оптимизации, а тут нагрянула эпидемия CoViD-19. Результат, как следовало ожидать, удручающий. Очередное описание того, с чем сталкиваются врачи и пациенты в медицинских учреждениях, опубликовали в паблике во ВКонтакте «Белгород – это интересно». Автор пос...</string>
    <string name="categories">Категории</string>
    <string name="cashback">кэшбэк</string>
    <string name="user_raiting">Рейтинг пользователя:</string>
    <string name="score">Счёт:</string>
    <string name="about_myself">О себе:</string>
    <string name="birth_date">Дата рождения:</string>
    <string name="city">Город:</string>
    <string name="achievements">Достижения:</string>
    <string name="phonenumber">Телефон:</string>
    <string name="social_network">Социальные сети:</string>
    <string name="product_name">Название товара</string>
    <string name="product_price">Цена товара</string>
    <string name="buy">Купить</string>


</resources>