<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginTop="75dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewProduct"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/text_view_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewProduct"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/product_name"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/text_view_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_product_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buy_text_view"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_product_price"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_baseline_label_24"
                android:paddingLeft="9dp"
                android:paddingTop="15dp"
                android:text="@string/buy"
                android:textColor="@color/white" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>